--- a/css/main.scss
+++ b/css/main.scss
@@ -329,6 +329,19 @@ section {
 }
 
 
+.circle {
+    animation: circleAnim 1s infinite alternate-reverse;
+}
 
+@keyframes circleAnim {
+    from {
+        transform: translate(262px, 798px);
+        z-index: 5;
+    }
+
+    to {
+        transform: translate(262px, 830px);
+    }
+}
 
 
